--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <div class="row">
         <div class="col-md-4">
             <div class="card">
+                <div class="card-header text-center"><h5>News Tasks</h5></div>
                 <div class="card-body">
                     <form id="task-form">
                         <div class="form-group">
@@ -19,11 +20,12 @@
                         <div class="form-group">
                             <textarea id="task-description" rows="3" class="form-control" placeholder="Description"></textarea>
                         </div>
-                        <button class="btn btn-primary btn-block" id="btn-send">SEND</button>
+                        <button class="btn btn-secondary btn-block" id="btn-send">Send</button>
                     </form>
                 </div>
             </div>
         </div>
+        <div id="get-tasks" class="col-md-6"></div>
     </div>
 </div>
 
@@ -33,6 +35,9 @@
 
 <!-- Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<!--FIRESTONE-->
+<script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-firestore.js"></script>
 
 <script>
   // Your web app's Firebase configuration
