--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
                         <div class="form-group">
                             <textarea id="task-description" rows="3" class="form-control" placeholder="Description"></textarea>
                         </div>
-                        <button class="btn btn-secondary btn-block" id="btn-send">Send</button>
+                        <button class="btn btn-secondary btn-block" id="btnSend">Save</button>
                     </form>
                 </div>
             </div>
