Se añadió el espacio donde se almacenará el ALERT

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
 <body>
 
 <div class="container p-4">
+    <!--ALERT ERROR-->
+    <div class="card mx-auto border border-0" style="width: 20rem; background: black;" id="formError"></div>
     <div class="row">
         <div class="col-md-4">
             <div class="card">
