Firebase credentials were hidden

--- a/src/index.html
+++ b/src/index.html
@@ -44,13 +44,7 @@
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyBP4xuVU9lvWeoZYA9bfhnaSQpUdRO-9QA",
-    authDomain: "javascript-firebase-crud.firebaseapp.com",
-    databaseURL: "https://javascript-firebase-crud.firebaseio.com",
-    projectId: "javascript-firebase-crud",
-    storageBucket: "javascript-firebase-crud.appspot.com",
-    messagingSenderId: "891176594288",
-    appId: "1:891176594288:web:8437d2609a0a9574dc7db5"
+    //CREDENTIALS OF FIREBASE HERE
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
